Generally fixed responsivity of footer, it looks awkward on mobile atm though. Will work on projects responsivity

--- a/src/Components/ContactFooter/style.module.scss
+++ b/src/Components/ContactFooter/style.module.scss
@@ -118,6 +118,45 @@ $color3: #ffc17f;
     }
   }
 }
+@media only screen and (max-width: 1200px) {
+  .contact {
+    display: flex;
+    align-items: center;
+    .title {
+      font-size: 40px;
+      .hr {
+        width: 180px;
+        hr {
+          height: 2px;
+        }
+      }
+      .iconContainer {
+        padding-top: 0px;
+        .icon {
+          font-size: 45px;
+        }
+      }
+    }
+    .buttonContainer {
+      .contactButton {
+        font-size: 15px;
+        width: 150px;
+        height: 30px;
+      }
+    }
+  }
+  .resumeContainer {
+    padding-right: 8%;
+    font-size: 120px;
+    .resume {
+      p {
+        margin-top: -10px;
+        margin-bottom: 0px;
+        font-size: 15px;
+      }
+    }
+  }
+}
 @media only screen and (max-width: 450px) {
   .contact {
     width: 100%;
@@ -128,19 +167,21 @@ $color3: #ffc17f;
     flex-direction: column;
     padding-left: 0px;
     .title {
-      text-align: center;
-      font-size: 40px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      font-size: 35px;
       .hr {
         hr {
-          background: $color1;
-          border-color: $color1;
+          height: 2px;
         }
       }
       .iconContainer {
         text-align: center;
-        margin-top: 10px;
+        margin-top: -10px;
         .icon {
-          margin-right: 20px;
+          margin-left: 10px;
+          margin-right: 10px;
           font-size: 40px;
         }
       }
@@ -153,8 +194,8 @@ $color3: #ffc17f;
       .contactButton {
         font-size: 15px;
         width: 150px;
-        height: 15px;
-        padding: 20px 60px 20px 55px;
+        height: 10px;
+        padding: 15px 60px 15px 55px;
       }
       .contactButton:hover {
         border-radius: 50px;
@@ -171,8 +212,13 @@ $color3: #ffc17f;
     padding-top: 10px;
     font-size: 90px;
     padding-bottom: 10%;
+    padding-right: 0px;
     .resume {
+      a {
+        padding-bottom: 0px;
+      }
       p {
+        padding-top: 0px;
         font-size: 15px;
       }
     }
